feat: #111011 课程数据概览导出新增二次确认

--- a/app/Resources/views/course-manage/overview/task-detail/task-chart.html.twig
+++ b/app/Resources/views/course-manage/overview/task-detail/task-chart.html.twig
@@ -5,14 +5,7 @@
     <input type="hidden" name="courseId" value="{{ course.id }}">
   </form>
 </span>
-{% include 'export/export-btn.html.twig' with
-  {
-    'exportFileName' : 'course-overview-task-list',
-    'targetFormId': 'overview-task-list',
-    'exportClass': 'cd-btn-sm pull-right cd-btn-primary',
-    'exportWebpack': 'ture'
-  }
-%}
+<button class=" cd-btn  mhs cd-btn-sm pull-right cd-btn-primary course-student-task-detail-js-export-btn" type="button" id="student-add-btn"><i class="es-icon es-icon-filedownload cd-text-sm"></i> {{'form.btn.export'|trans}}</button>
 <div id="task-data-chart"
   data-url="{{ path('course_set_manage_task_detail',{courseId:course.id}) }}"
   data-form=".js-task-detail"
