feat: #111011 新增班级数据概览导出二次验证

--- a/app/Resources/views/classroom-manage/statistics/course-chart.html.twig
+++ b/app/Resources/views/classroom-manage/statistics/course-chart.html.twig
@@ -12,14 +12,7 @@
     <input type="hidden" name="classroomId" value="{{ classroom.id }}">
   </form>
 </span>
-{% include 'export/export-btn.html.twig' with
-  {
-    'exportFileName' : 'classroom-statistics-course-learn',
-    'targetFormId': 'overview-task-list',
-    'exportClass': 'cd-btn-sm pull-right cd-btn-primary',
-    'exportWebpack': 'ture'
-  }
-%}
+<button class=" cd-btn  mhs cd-btn-sm pull-right cd-btn-primary classroom-course-chart-js-export-btn" type="button" id="student-add-btn"><i class="es-icon es-icon-filedownload cd-text-sm"></i> {{'form.btn.export'|trans}}</button>
 <div id="task-data-chart"
      data-url="{{ path('classroom_data_statistics_course_detail', {id: classroom.id}) }}"
      data-form=".js-task-detail"
