--- a/app/Resources/static-src/app/less/item-bank/components/item-engine/card.less
+++ b/app/Resources/static-src/app/less/item-bank/components/item-engine/card.less
@@ -404,10 +404,7 @@
 }
 
 .ibs-resutl-item {
-  width: calc(58.33333333% + 312px);
-  @media (max-width: 1200px) {
-    width: calc(58.33333333% + 288px);
-  }
+  width: 100%;
 }
 
 .ant-btn-background-ghost {
