--- a/app/Resources/static-src/app/less/v2/page/assesment.less
+++ b/app/Resources/static-src/app/less/v2/page/assesment.less
@@ -71,8 +71,19 @@
   position: relative;
   min-height: 160px;
   text-align: left;
+  @media (max-width: 768px) {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
   &__icon {
+    @media (max-width: 768px) {
+      display: flex;
+      position: static;
+      margin-bottom: 20px;
+    }
     position: absolute;
     top: 40px;
     left: 180px;
@@ -86,8 +97,11 @@
   }
 
   &__content {
+    @media (max-width: 768px) {
+      margin-left: 0;
+      width: 80%;
+    }
     margin-left: 377px;
-
     .result-status {
       font-size: 24px;
       line-height: 32px;
@@ -103,6 +117,10 @@
     }
 
     .teacher-comment {
+      @media (max-width: 768px) {
+        margin-left: 40px;
+        margin-right: 40px;
+      }
       position: relative;
       padding-right: 16px;
       margin-top: 16px;
@@ -123,7 +141,7 @@
         min-height: 68px;
         border-radius: 8px;
         background: #ecf9f1;
-        
+
         &--pb28 {
           padding-bottom: 28px;
         }
