--- a/app/Resources/static-src/app/less/v2/page/assesment.less
+++ b/app/Resources/static-src/app/less/v2/page/assesment.less
@@ -122,7 +122,7 @@
         margin-right: 40px;
       }
       position: relative;
-      padding-right: 16px;
+      width: 80%;
       margin-top: 16px;
       font-size: 16px;
       color: #999;
