fix: #110698 注释班级课程导出按钮

--- a/app/Resources/views/course-manage/student/records.html.twig
+++ b/app/Resources/views/course-manage/student/records.html.twig
@@ -8,9 +8,9 @@
 {% block page_title %}{{ 'course.student_manage'|trans }}{% endblock %}
 
 {% block main_heading %}
-  {% if type == 'exit' %}
-    {% include 'course-manage/panel-header/course-publish-header.html.twig' with {code: type, btnGroup:1} %}
-  {% endif %}
+{#  {% if type == 'exit' %}#}
+{#    {% include 'course-manage/panel-header/course-publish-header.html.twig' with {code: type, btnGroup:1} %}#}
+{#  {% endif %}#}
 {% endblock %}
 
 {% block main_body %}
