--- a/app/Resources/views/admin-v2/system/user-setting/login-connect.html.twig
+++ b/app/Resources/views/admin-v2/system/user-setting/login-connect.html.twig
@@ -133,7 +133,7 @@
         </div>
         <div class="controls col-md-8 radios">
           <label>
-            <input type="radio" name="login_strong_pwd_enable" value="1" {% if loginConnect.strong_pwd_skip_checkbox_name|default(0) == 1 %}checked{% endif %} >
+            <input type="radio" name="login_strong_pwd_enable" value="1" {% if loginConnect.login_strong_pwd_enable|default(1) == 1 %}checked{% endif %} >
             {{ 'admin.login_connect.open'|trans }}
           </label>
           <label>
@@ -142,7 +142,7 @@
           </label>
           <p class="help-block">
             <label>
-              <input type="checkbox" name="strong_pwd_skip_checkbox_name" value="1" id="strong_pwd_skip-agreement-checkbox" {% if loginConnect.strong_pwd_skip_checkbox_name == 1 and loginConnect.login_strong_pwd_enable|default(1) == 0 %}checked{% endif %}>
+              <input type="checkbox" name="strong_pwd_skip_checkbox_name" value="1" id="strong_pwd_skip-agreement-checkbox" {% if loginConnect.strong_pwd_skip_checkbox_name|default(0) == 1 and loginConnect.login_strong_pwd_enable|default(1) == 0 %}checked{% endif %}>
               {{ 'admin.login_connect.strong_pwd_skip.danger'|trans }}
             </label>
           </p>
