fix: #110404 修复：班级话题管理员回复时上传的图片不显示的bug

--- a/app/Resources/views/thread/part/post-item.html.twig
+++ b/app/Resources/views/thread/part/post-item.html.twig
@@ -35,7 +35,7 @@
       <span class="color-gray">{{post.createdTime|smart_time}} </span>
       {% if author.badgeTitle|default(null) %}<span class="mll color-danger">({{ dict_text('classroomRoles', author.badgeTitle) }}) </span>{% endif %}
     </div>
-    <div class="editor-text">{{ post.content|at(post.ats)|cdn|raw|wrap_text() }}{% if app.user.isLogin()|default(false) and app.user.id != post.userId and is_reported(reportType, post.id) %}<span style="color:red;">({{ '已举报'|trans }})</span>{% endif %}<span id="{{ 'js-thread-after-' ~ post.id }}" style="color:red;"></span></div>
+    <div class="editor-text">{{ post.content|at(post.ats)|cdn|raw }}{% if app.user.isLogin()|default(false) and app.user.id != post.userId and is_reported(reportType, post.id) %}<span style="color:red;">({{ '已举报'|trans }})</span>{% endif %}<span id="{{ 'js-thread-after-' ~ post.id }}" style="color:red;"></span></div>
     {% include 'attachment/widget/list.html.twig' with {targetType:'classroom.thread.post', targetId:post.id} %}
     <div class="comment-sns">
       {% include 'thread/post-interaction.html.twig' %}
