fix: #111791 修复：题目查重页面点击【删除】，页面错乱，题目删除不了的bug

--- a/app/Resources/views/question-manage/duplicative-questions.html.twig
+++ b/app/Resources/views/question-manage/duplicative-questions.html.twig
@@ -11,6 +11,7 @@
   {% do css(['app/css/item-bank.css']) %}
   {% do css(['app/css/item-bank-antdv.css']) %}
 {% endif %}
+{% do css(['app/css/main-ant.css']) %}
 
 {% block body %}
 
