--- a/app/Resources/views/courseset-manage/live/create-show.html.twig
+++ b/app/Resources/views/courseset-manage/live/create-show.html.twig
@@ -10,6 +10,9 @@
     {% elseif liveAccount.isExpired %}
     <div class="course-select disabled" data-toggle="tooltip" data-placement="top"
          title="{{ 'my.teaching.course_set.select_type.live_open_course.valid_service'|trans }}" data-type="{{ type }}">
+      {% elseif not has_permission('admin_v2_course_add') and not app.user.isTeacher() %}
+      <div class="course-select disabled" data-toggle="tooltip" data-placement="top"
+           title="{{ 'my.teaching.course_set.select_type.live_course.no_permission'|trans }}" data-type="{{ type }}">
       {% else %}
       <div class="course-select js-courseSetType {% if defaultType|default('normal') == type %}active{% endif %}"
            data-type="{{ type }}">
