--- a/app/Resources/views/courseset-manage/normal/create-show.html.twig
+++ b/app/Resources/views/courseset-manage/normal/create-show.html.twig
@@ -1,4 +1,4 @@
-<div class="course-select js-courseSetType {% if defaultType|default('normal') == type %}active{% endif %}" data-type="{{ type }}">
+<div class="course-select {% if not has_permission('admin_v2_course_add') and not app.user.isTeacher() %}disabled{% else %}js-courseSetType {% if defaultType|default('normal') == type %}active{% endif %}{% endif %}" {% if not has_permission('admin_v2_course_add') and not app.user.isTeacher() %}data-toggle="tooltip" data-placement="top" title="{{ 'my.teaching.course_set.select_type.normal_course.no_permission'|trans }}"{% endif %} data-type="{{ type }}">
   <i class="es-icon es-icon-putongkecheng "></i>
   <div class="course-type">{{ 'my.teaching.course_set.select_type.course'|trans }}</div>
   <div class="course-intro">{{ 'my.teaching.course_set.select_type.course.tips'|trans }}</div>
