--- a/app/Resources/views/my/teaching/course-sets.html.twig
+++ b/app/Resources/views/my/teaching/course-sets.html.twig
@@ -23,7 +23,7 @@
       </div>
     {% else %}
       <div class="empty">
-        <a class="cd-link-primary" href="{{ path('course_set_manage_create') }}" target="_blank">
+        <a class="cd-link-primary" href="{{ path('course_set_manage_create', {default: filter == 'live' ? 'live' : 'normal'}) }}" target="_blank">
           {% if filter|default('normal') == 'live' %}
             {{ 'my.teaching.course_set.live_empty_hint'|trans }}
           {% else %}
