--- a/app/Resources/views/my/teaching/course-type-select.html.twig
+++ b/app/Resources/views/my/teaching/course-type-select.html.twig
@@ -1,14 +1,14 @@
 <div class="visible-xs cd-mb24 clearfix">
   <div class="pull-right">
     {% if s2b2c_has_behaviour_permission('canAddCourse') and ('ROLE_TEACHER' in app.user.roles or has_permission('admin_v2_course_content_manage')) %}S2B2C
-      <a class="cd-btn cd-btn-primary" id="create-course" href="{{ path('course_set_manage_create') }}" >{{ 'my.teaching.course_set.create'|trans }}</a>
+      <a class="cd-btn cd-btn-primary" id="create-course" href="{{ path('course_set_manage_create', {default: filter == 'live' ? 'live' : 'normal'}) }}" >{{ 'my.teaching.course_set.create'|trans }}</a>
     {% endif %}
   </div>
 </div>
 <div class="cd-mb24">
   <div class="pull-right hidden-xs">
     {% if s2b2c_has_behaviour_permission('canAddCourse') and ('ROLE_TEACHER' in app.user.roles or has_permission('admin_v2_course_content_manage')) %}{#S2B2C#}
-      <a class="cd-btn cd-btn-primary" id="create-course" href="{{ path('course_set_manage_create') }}" >{{ 'my.teaching.course_set.create'|trans }}</a>
+      <a class="cd-btn cd-btn-primary" id="create-course" href="{{ path('course_set_manage_create', {default: filter == 'live' ? 'live' : 'normal'}) }}" >{{ 'my.teaching.course_set.create'|trans }}</a>
     {% endif %}
   </div>
   <ul class="courseset-type-list nav nav-pills">
