--- a/web/activities/testpaper/resources/views/create_or_update_content.html.twig
+++ b/web/activities/testpaper/resources/views/create_or_update_content.html.twig
@@ -60,7 +60,7 @@
 </style>
 
   <div class="tab-pane js-course-tasks-pane active js-step2-view">
-  
+
     <form class="form-horizontal" id="step2-form">
       {% set course = get_course(activity.fromCourseId) %}
       {% set testpaper = activity.ext.testpaper|default('') %}
@@ -205,10 +205,28 @@
       <div class="form-group">
 			  <div class="col-sm-2 control-label">
           <label for="length" class="control-label-required">{{ 'course.plan_task.activity_manage.testpaper.validity.period.of.examination'|trans }}</label>
-          <i class="es-icon es-icon-wenhaotishi color-gray" data-toggle="tooltip" data-placement="top" data-original-title="{{ 'course.plan_task.activity_manage.testpaper.rangedate'|trans|raw }}"></i>
 				</div>
 				<div class="col-sm-10 controls radios">
-				  {{ radios('validPeriodMode', {'0':'course.plan_task.activity_manage.exercise.default_difficulty'|trans, '1':'course.plan_task.activity_manage.testpaper.mode.realTimeRange'|trans, '2':'course.plan_task.activity_manage.testpaper.mode.startTime'|trans }, activity.ext.validPeriodMode|default('0') )}}
+          <label>
+            <input type="radio" name="validPeriodMode" value="0" checked="checked">
+            {{ 'course.plan_task.activity_manage.exercise.default_difficulty'|trans }}
+            <i class="es-icon es-icon-wenhaotishi color-gray" data-toggle="tooltip" data-placement="top" data-original-title="{{ 'course.plan_task.activity_manage.testpaper.unlimited'|trans|raw }}"></i>
+          </label>
+          <label>
+            <input type="radio" name="validPeriodMode" value="1">
+            {{ 'course.plan_task.activity_manage.testpaper.mode.realTimeRange'|trans }}
+            <i class="es-icon es-icon-wenhaotishi color-gray" data-toggle="tooltip" data-placement="top" data-original-title="{{ 'course.plan_task.activity_manage.testpaper.realTimeRange'|trans|raw }}"></i>
+          </label>
+          <label>
+            <input type="radio" name="validPeriodMode" value="2">
+            {{ 'course.plan_task.activity_manage.testpaper.mode.startTime'|trans }}
+            <i class="es-icon es-icon-wenhaotishi color-gray" data-toggle="tooltip" data-placement="top" data-original-title="{{ 'course.plan_task.activity_manage.testpaper.startTime'|trans|raw }}"></i>
+          </label>
+          <label>
+            <input type="radio" name="validPeriodMode" value="3">
+            {{ 'course.plan_task.activity_manage.testpaper.mode.fixedTimeInterval'|trans }}
+            <i class="es-icon es-icon-wenhaotishi color-gray" data-toggle="tooltip" data-placement="top" data-original-title="{{ 'course.plan_task.activity_manage.testpaper.fixedTimeInterval'|trans|raw }}"></i>
+          </label>
         </div>
           <input type="hidden" name="startTime" value="{% if activity.ext.answerScene.start_time|default(0) > 0 %}{{ activity.ext.answerScene.start_time|date('Y-m-d H:i:s') }}{% else %}0{% endif %}" size="25" >
           <input type="hidden" name="endTime" value="{% if activity.ext.answerScene.end_time|default(0) > 0 %}{{ activity.ext.answerScene.end_time|date('Y-m-d H:i:s') }}{% else %}0{% endif %}" size="25" >
@@ -219,6 +237,10 @@
         <div class="col-sm-offset-2 col-sm-10 controls">
           <input type="{% if activity.ext.validPeriodMode|default('0') != 2 %}hidden{% else %}text{% endif %}" readonly  unselectable="on"
             size="25" id="rangeStartTime" name="rangeStartTime" class="form-control js-start-range testpaperTimeRange" style="width: 160px;" >
+        </div>
+        <div class="col-sm-offset-2 col-sm-10 controls">
+          <input type="{% if activity.ext.validPeriodMode|default('0') != 3 %}hidden{% else %}text{% endif %}" readonly  unselectable="on"
+                 id="fixedTime" name="fixedTime" size="25" class="form-control js-fixedTime-data testpaperTimeRange" autocomplete="off" style="width: 320px;">
         </div>
 			</div>
 
