--- a/web/activities/testpaper/resources/views/create_or_update_content.html.twig
+++ b/web/activities/testpaper/resources/views/create_or_update_content.html.twig
@@ -289,7 +289,7 @@
       </div>
 
       <div id="advanced-settings" class="form-group" style="display: none;">
-        <div class="form-group">
+        <div class="form-group redo-interval-form-group">
           <div class="col-sm-2 control-label">
             <label for="lesson-redo-interval-field">{{ 'course.plan_task.activity_manage.testpaper.redo_interval'|trans }}</label>
             <i class="es-icon es-icon-wenhaotishi color-gray" data-toggle="tooltip" data-placement="top" data-original-title="{{ 'course.plan_task.activity_manage.testpaper.redo_interval_tips'|trans }}"></i>
