--- a/app/Resources/views/oauth2/create-account.html.twig
+++ b/app/Resources/views/oauth2/create-account.html.twig
@@ -35,6 +35,7 @@
       <div class="form-group cd-form-group">
         <label class="third-party-form__label" for="password">{{ 'user.register.password_label'|trans }}</label>
         <input class="form-control" type="password" id="password" name="password" placeholder="{{ 'user.oauth.register.password__placeholder'|trans }}">
+        <div class="js-password-tip" style="color: rgba(0, 0, 0, 0.56); font-size: 14px; font-weight: 400; line-height: 22px;">{{ 'user.oauth.register.password_tip'|trans }}</div>
       </div>
 
       <div class="form-group cd-form-group">
